--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,5 @@
-# Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: creatrip
+repo: ststus
 
 sites:
   - name: Creatrip Company Website
@@ -23,6 +22,5 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+  theme: ocean
 
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
