--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -28,11 +28,11 @@ commitMessages:
   commitAuthorName: "Creatrip Bot"
   commitAuthorEmail: "taewoo.lee@creatrip.com"
   
-workflowSchedule:
-  graphs: "0 0 * * *"
-  responseTime: "0 23 * * *"
-  staticSite: "0 1 * * *"
-  summary: "0 0 * * *"
-  updateTemplate: "0 0 * * *"
-  updates: "0 3 * * *"
-  uptime: "*/5 * * * *"
+# workflowSchedule:
+#   graphs: "0 0 * * *"
+#   responseTime: "0 23 * * *"
+#   staticSite: "0 1 * * *"
+#   summary: "0 0 * * *"
+#   updateTemplate: "0 0 * * *"
+#   updates: "0 3 * * *"
+#   uptime: "*/5 * * * *"
