--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -22,7 +22,7 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/creatrip
-  theme: 
+  theme: light
 
 commitMessages:
   commitAuthorName: "Creatrip Bot"
